--- a/css/stages.css
+++ b/css/stages.css
@@ -1,86 +1,62 @@
 .stages {
-    display: flex;
     flex-direction: column;
-    margin: 0 auto;
-    align-items: center;
-    width: 100%;
 }
 
-.stages h2 {
-    color: #FFF;
+.stages h3 {
     text-align: center;
-    font-family: Montserrat, sans-serif;
     font-size: 28px;
-    font-weight: 500;
-    line-height: 14px;
     text-transform: uppercase;
-    margin-bottom: 128px;
 }
 
 .rectangle-parent {
     display: flex;
+    margin-top: 128px;
     background: white;
-    width: 100%;
-    margin-bottom: 120px;
-    position: relative;
-    box-sizing: border-box;
-    overflow: visible; 
 }
 
 .frame-item-images {
     display: flex;
-    flex-wrap: wrap;
     gap: 5px;
     width: 50%; 
-    justify-content: space-between;
-    position: relative;
     margin-top: -32px; 
     margin-bottom: -32px; 
 }
 
 .frame-item-images img {
     width: calc(50% - 3px);
-    object-fit: cover;
 }
 
 .frame-item {
     display: flex;
     width: 50%; 
-    text-align: left;
-    justify-content: space-between;
     align-items: center;
-    box-sizing: border-box;
-    padding: 80px;
+    padding: 131px 56px;
 }
 
 .frame-item-text {
     width: 100%;
 }
 
-.frame-item-text h3 {
+.frame-item-text h2 {
     color: #000;
-    font-family: Montserrat, sans-serif;
-    font-size: 20px;
-    font-weight: 600;
     line-height: 30px;
     margin-bottom: 20px;
 }
 
 .frame-item-text p {
     color: #000;
-    font-family: Montserrat, sans-serif;
     font-size: 14px;
-    font-weight: 400;
     line-height: 150%;
 }
 
 .frame-item-text p span {
     color: #9C7848;
-    font-family: Montserrat, sans-serif;
     font-size: 14px;
     font-weight: 600;
     line-height: 150%;
 }
+
+/*FOR MOBILE BELOW*/
 
 @media (max-width: 768px) {
     .stages h2{
