--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,3 @@
-@import url('./font-awesome.css');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
-
 .footer {
     display: flex;
     justify-content: space-between;
@@ -11,12 +8,9 @@
 
 .left-footer {
     width: 25%;
-    color: #fff;
 }
 
 .left-footer img {
-    width: 112.686px;
-    height: 48px;
     margin-bottom: 48px;
 }
 
@@ -24,13 +18,7 @@
     margin-bottom: 48px;
 }
 
-.left-footer-contacts h2 {
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 14px;
+.left-footer-contacts h3 {
     text-transform: uppercase;
     margin-bottom: 48px;
 }
@@ -38,7 +26,7 @@
 .left-footer-contact-info {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    gap: 24px;
 }
 
 .contact-info-item-left p:nth-child(2) {
@@ -51,11 +39,7 @@
 
 .contact-info-item-left p,
 .contact-info-item-right p {
-    color: #FFF;
-    font-size: 14px;
-    font-style: normal;
     font-weight: 300;
-    line-height: 21px;
     margin-bottom: 5px;
 }
 
@@ -70,18 +54,12 @@
 }
 
 .left-footer-nav {
-    display: flex;
+    width: 100%;
     flex-direction: column;
     align-items: flex-start;
-    width: 100%;
 }
 
-.left-footer-nav h2 {
-    color: #FFF;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 14px;
+.left-footer-nav h3 {
     text-transform: uppercase;
     margin-bottom: 24px;
 }
@@ -92,37 +70,27 @@
 }
 
 .left-footer-nav ul li {
-    color: #FFF;
     font-size: 12px;
-    font-style: normal;
     font-weight: 500;
     line-height: 14px;
     text-transform: uppercase;
 }
 
 .right-footer {
-    width: 51%;
+    width: 52%;
 }
 
 .right-footer h2 {
-    color: #FFF;
     font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 14px;
     margin-bottom: 64px;
 }
 
 .right-footer form {
     display: flex;
-    flex-direction: column;
 }
 
 .right-footer label {
-    color: #FFF;
-    font-family: Montserrat;
     font-size: 12px;
-    font-style: normal;
     font-weight: 400;
     line-height: 148%;
     letter-spacing: 0.24px;
@@ -140,12 +108,7 @@
 .right-footer input[type="email"],
 .right-footer textarea {
     width: 100%;
-    color: #FFF;
-    display: flex;
     padding: 14px 12px;
-    align-items: center;
-    gap: 10px;
-    align-self: stretch;
     background-color: transparent;
     border: none;
     border-bottom: 1px solid rgba(228, 178, 113, 0.30);
@@ -166,35 +129,26 @@
     border-radius: 3px;
     position: relative;
     cursor: pointer;
+    top: 5px;
 }
 
 .right-footer input[type="checkbox"]:checked::before {
     content: '\2713';
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 41%;
+    left: 75%;
     transform: translate(-50%, -50%);
     width: 100%;
-    color: #fff;
-    font-size: 14px;
-    background-color: #007bff;
 }
 
-
 #terms {
-    color: #FFF;
     font-family: 'Inter', sans-serif;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 145%;
     text-transform: none;
     padding: 5px;
     margin: 0;
 }
 
 #terms a {
-    color: #FFF; 
     text-decoration: underline;
 }
 
@@ -204,29 +158,15 @@
     margin-bottom: 50px;
 }
 
-.footer-line {
-    border-top: 1px solid rgba(255, 255, 255, 0.30);
-    background: #0B1931;
-    width: 100%;
-}
-
 .down-footer {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding-top: 19px;
-    padding-bottom: 19px;
+    padding: 19px 0;
     width: 100%;
 }
 
 .down-footer p {
-    margin: 0;
-    align-self: flex-start;
-    color: #FFF;
-    font-family: Montserrat;
     font-size: 10px;
-    font-style: normal;
-    font-weight: 400;
     line-height: 9.95px;
     letter-spacing: 0.956px;
     text-transform: uppercase;
@@ -235,15 +175,20 @@
 .down-footer ul {
     list-style-type: none;
     display: flex;
-    align-self: flex-end;
     gap: 16px;
 }
 
 .down-footer ul li {
-    color: #FFF;
-    font-family: Montserrat;
     font-size: 11px;
-    font-style: normal;
     font-weight: 400;
     line-height: 15.95px;
+}
+
+.footer-line {
+    border-top: 1px solid rgba(255, 255, 255, 0.30);
+    width: 100vw; 
+    position: absolute;
+    bottom: 1%;
+    margin: 0;
+    padding: 0;
 }
