--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @import url('./css-reset.css'); 
 @import url('./font-awesome.css');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @import url('./header.css');
@@ -14,11 +15,14 @@
     box-sizing: border-box;
     flex-wrap: wrap;
     font-family: Montserrat;
+    color: #fff;
+    font-style: normal;
 }
 
 body{
     background-color: #0B1931;
     border-radius: 8px;
+    position: relative;
 }
 
 .container{
@@ -28,9 +32,53 @@ body{
 
 .section{
     max-width: 1920px;
-    width: 92%;
+    width: 93%;
     display: flex;
     padding-top: 150px;
+    margin: 0 auto;
+}
+
+.btn {
+    color: #0B1931;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 14px;
+    text-transform: uppercase;
+    height: 40px;
+    padding: 12px 16px;
+    cursor: pointer;
+    background-color: #E4B271;
+    border: none;
+}
+
+.btn:hover {
+    transition: 0.3s ease-in-out;
+    background-color: #f3ab4c;
+}
+
+.specColor {
+    color: #E4B271;
+    font-weight: 600;
+}
+
+h1{
+    font-weight: 700;
+}
+
+h2{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 14px;
+}
+h3{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 14px;
+}
+p{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
 }
 
 @media screen and (max-width:768px) {
