--- a/css/news.css
+++ b/css/news.css
@@ -1,72 +1,44 @@
 .news {
-    display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto;
     gap: 64px;
 }
 
-.news h2 {
-    color: #FFF;
+.news h3 {
     text-align: center;
-    font-family: Montserrat, sans-serif;
     font-size: 28px;
-    font-weight: 500;
-    line-height: 14px;
     text-transform: uppercase;
 }
 
 .news-news {
     display: flex;
-    margin: 0 auto;
     justify-content: space-between;
-    width: 100%;
-    flex-wrap: wrap;
     gap: 15px;
 }
 
 .news-new {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     width: calc(25% - 15px);
-    box-sizing: border-box;
 }
 
 .news-new img {
     width: 100%;
-    height: auto;
-    display: block;
     margin-bottom: 24px;
 }
 
-.news-new h3 {
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 14px;
+.news-new h2 {
+    margin-bottom:8px;
+}
+
+.news-new p:nth-of-type(1) {
+    color: rgba(255, 255, 255, 0.50);
     margin-bottom: 8px;
 }
 
-.news-new p {
-    color: rgba(255, 255, 255, 0.50);
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 21px;
+.news-new p:nth-of-type(2) {
+    margin-bottom: 0;
 }
 
-.news-new h4 {
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 21px;
-}
+/*FOR MOBILE BELOW*/
 
 @media (max-width: 1024px) {
     .news-new {
