--- a/css/frame.css
+++ b/css/frame.css
@@ -85,6 +85,10 @@
     display: none;
 }
 
+.swiper-pagination{
+    display: none;
+}
+
 @media screen and (max-width: 768px) {
     .end-group {
         display: none;
