--- a/css/stages.css
+++ b/css/stages.css
@@ -64,8 +64,16 @@
 /*FOR MOBILE BELOW*/
 
 @media (max-width: 768px) {
+    .stages{
+        padding-top: 150px !important;
+    }
+
+    .stages{
+        width: 100% !important;
+    }
+
     .stages h3 {
-        margin-bottom: 80px;
+        margin-bottom: 50px;
     }
     .stages h2{
         margin-bottom: 80px;
@@ -80,7 +88,7 @@
     }
 
     .frame-item-text {
-        width: 95%;
+        width: 100%;
         text-align: left;
         border-bottom: 1px solid #E4B271;
     }
@@ -109,6 +117,7 @@
     .frame-item {
         width: 100%;
         justify-content: center;
+        gap: 2.39px 3.39px;
     }
     
     .frame-item-images img {
